--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,10 @@ version: '3.7'
 
 services:
   api:
-    build:
-      context: ./src
-      dockerfile: Dockerfiles
+    build: .
     ports:
       - 8000:8000
     environment:
       LANG: "it"
     volumes:
-      - SDOW_DATA_PATH:/usr/src/data/
+      - ${SDOW_DATA_PATH}:/usr/src/data/
